# beeai-platform

./: .aiignore  .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  agent-registry.yaml  agentstack.code-workspace  install.sh  mise.toml  pnpm-lock.yaml  pnpm-workspace.yaml  policy.yaml  tasks.toml
agents/chat/: Dockerfile  pyproject.toml
agents/chat/src/chat/: agent.py  tmp_chat_model.py
agents/chat/src/chat/helpers/: citations.py  trajectory.py
agents/community/gpt-researcher/: Dockerfile  pyproject.toml
agents/community/gpt-researcher/gpt_researcher_agent/: __init__.py  agent.py  env_patch.py
agents/deepagents_content_builder/: Dockerfile  README.md  pyproject.toml
agents/deepagents_content_builder/src/content_builder/: .gitignore  __init__.py  agent.py  backend.py  tools.py  utils.py
agents/form/: Dockerfile  pyproject.toml
agents/form/src/form/: agent.py
agents/langgraph-reflection/: Dockerfile  README.md  pyproject.toml
agents/langgraph-reflection/src/langgraph_reflection/: __init__.py  agent.py
agents/official/beeai-framework/chat/: Dockerfile  pyproject.toml
agents/official/beeai-framework/rag/: Dockerfile  pyproject.toml
agents/official/sequential-workflow/: Dockerfile  pyproject.toml
agents/official/sequential-workflow/src/sequential_workflow/: __init__.py  agent.py
agents/rag/: Dockerfile  pyproject.toml
agents/rag/src/rag/: agent.py
agents/rag/src/rag/helpers/: citations.py  event_binder.py  trajectory.py  vectore_store.py
apps/agentstack-cli/: microshift.yaml  migrating-k3s-to-microshift.md  pyproject.toml  tasks.toml
apps/agentstack-cli/src/agentstack_cli/: __init__.py  api.py  async_typer.py  auth_manager.py  configuration.py  console.py  server_utils.py  utils.py
apps/agentstack-cli/src/agentstack_cli/commands/: agent.py  build.py  connector.py  mcp.py  model.py  platform.py  self.py  server.py  user.py
apps/agentstack-cli/src/agentstack_cli/data/: .gitignore
apps/agentstack-sdk-py/: pyproject.toml  tasks.toml
apps/agentstack-sdk-py/examples/: agent.py  artifacts.py  awaiting_agent.py  canvas_ui_code_agent.py  canvas_ui_test_agent.py  citation_agent.py  citation_agent_artifact.py  cli.py  connector_management.py  connectors_agent.py  connectors_client.py  dependencies.py  embedding_agent.py  error_agent.py  form_agent.py  form_request_agent.py  github_mcp_agent.py  history.py  history_framework.py  input_required.py  llm_agent.py  mcp_agent.py  mcp_client.py  oauth.py  request_form_agent.py  secrets_agent.py  settings_agent.py  settings_agent_legacy.py  tool_call_approval_agent.py  tool_call_approval_client.py  trajectory.py  trajectory_agent.py
apps/agentstack-sdk-py/src/agentstack_sdk/: __init__.py  types.py
apps/agentstack-sdk-py/src/agentstack_sdk/a2a/: __init__.py  types.py
apps/agentstack-sdk-py/src/agentstack_sdk/platform/: __init__.py  client.py  common.py  configuration.py  connector.py  context.py  file.py  model_provider.py  provider.py  provider_build.py  provider_discovery.py  types.py  user.py  user_feedback.py  variables.py  vector_store.py
apps/agentstack-sdk-py/src/agentstack_sdk/server/: __init__.py  agent.py  app.py  constants.py  context.py  dependencies.py  logging.py  server.py  telemetry.py  utils.py
apps/agentstack-sdk-py/src/agentstack_sdk/util/: __init__.py  file.py  httpx.py  logging.py  pydantic.py  resource_context.py  telemetry.py  utils.py
apps/agentstack-sdk-py/tests/: conftest.py
apps/agentstack-sdk-py/tests/e2e/: conftest.py  test_extensions.py  test_history.py  test_runs.py  test_yields.py
apps/agentstack-sdk-py/tests/unit/: test_agent_detail_population.py  test_dependencies.py  test_import_all.py  test_platform_client.py
apps/agentstack-server/: Dockerfile  README.md  pyproject.toml  tasks.toml  template.env
apps/agentstack-server/src/agentstack_server/: __init__.py  application.py  bootstrap.py  configuration.py  exceptions.py  logging_config.py  run_workers.py  telemetry.py  types.py
apps/agentstack-server/src/agentstack_server/api/: constants.py  dependencies.py  rate_limiter.py  utils.py
apps/agentstack-server/src/agentstack_server/domain/: constants.py  utils.py
apps/agentstack-server/src/agentstack_server/jobs/: procrastinate.py  queues.py
apps/agentstack-server/src/agentstack_server/service_layer/: build_manager.py  cache.py  deployment_manager.py  unit_of_work.py  webhook.py
apps/agentstack-server/src/agentstack_server/utils/: a2a.py  docker.py  fastapi.py  github.py  id.py  kubectl.py  logs_container.py  process.py  sdk.py  utils.py
apps/agentstack-server/tests/: __init__.py  conftest.py
apps/agentstack-server/tests/e2e/: conftest.py  test_auth.py
apps/agentstack-server/tests/e2e/agents/: conftest.py  test_agent_builds.py  test_agent_starts.py  test_context_store.py  test_platform_extensions.py
apps/agentstack-server/tests/e2e/examples/: conftest.py
apps/agentstack-server/tests/e2e/routes/: test_a2a_proxy.py  test_configurations.py  test_connectors.py  test_contexts.py  test_files.py  test_model_providers.py  test_openai.py  test_provider_variables.py  test_providers.py  test_user.py  (+2 more)
apps/agentstack-server/tests/integration/: conftest.py  test_rate_limit.py
examples/.template/example/: pyproject.toml
examples/agent-integration/error/adding-error-context/: pyproject.toml
examples/agent-integration/error/advanced-error-reporting/: pyproject.toml
examples/agent-integration/files/file-processing/: pyproject.toml
examples/agent-integration/forms/initial-form-rendering/: pyproject.toml
examples/agent-integration/llm-proxy-service/llm-access/: pyproject.toml
examples/agent-integration/mcp/custom-mcp-client-with-oauth/: pyproject.toml
examples/agent-integration/mcp/github-mcp-agent/: pyproject.toml
examples/agent-integration/multi-turn/advanced-history/: pyproject.toml
examples/agent-integration/multi-turn/streaming-agent-history/: pyproject.toml
examples/agent-integration/rag/simple-rag-agent/: pyproject.toml
examples/deploy-agents/building-agents/implement-your-agent-logic/: pyproject.toml
(+2388 files in other folders)
