[project]
name = "chat"
version = "0.1.0"
description = "AI-powered conversational system with memory and tools."
authors = [
    { name = "IBM Corp." },
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "beeai-framework[beeai-platform,duckduckgo,wikipedia]>=0.1.56",
    "openai>=1.107.1",
    "beeai-sdk",
    "openinference-instrumentation-beeai>=0.1.12",
    "pydantic-settings>=2.9.0",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 120

[tool.uv.sources]
beeai-sdk = { path = "../../apps/beeai-sdk-py", editable = true }

[project.scripts]
server = "chat.agent:serve"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "watchfiles>=1.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
