[project]
name = "form"
version = "0.1.0"
description = "Agent with structured input."
authors = [
    { name = "IBM Corp." },
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "beeai-framework[duckduckgo,wikipedia]>=0.1.58",
    "openai==1.99.9",
    "agentstack-sdk",
    "openinference-instrumentation-beeai>=0.1.12",
    "pydantic-settings>=2.9.0",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 120

[tool.uv.sources]
agentstack-sdk = { path = "../../apps/agentstack-sdk-py", editable = true }

[project.scripts]
server = "form.agent:serve"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "watchfiles>=1.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
