[project]
name = "form"
version = "0.1.0"
description = "Agent with structured input."
authors = [
    { name = "IBM Corp." },
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "agentstack-sdk",
    "openinference-instrumentation-beeai>=0.1.14",
    "pydantic-settings>=2.9.0",
    "uvicorn>=0.37.0,<0.38.0",
]

[tool.ruff]
line-length = 120

[tool.uv.sources]
agentstack-sdk = { path = "../../apps/agentstack-sdk-py", editable = true }

[project.scripts]
server = "form.agent:serve"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=0.52.0",
    "watchfiles>=1.1.0",
]
