[project]
name = "langgraph-reflection"
version = "0.1.0"
description = "Reflection agent that writes essays and reflects on them using LangGraph"
authors = [
    { name = "IBM Corp." },
]
requires-python = ">=3.11"
dependencies = [
    "agentstack-sdk",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
]

[dependency-groups]
dev = []

[tool.ruff]
line-length = 120

[tool.uv.sources]
agentstack-sdk = { path = "../../apps/agentstack-sdk-py", editable = true }

[project.scripts]
server = "langgraph_reflection.agent:run"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"
