[project]
name = "rag"
version = "0.1.0"
description = "TBD"
authors = [
    { name = "IBM Corp." },
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "beeai-framework[duckduckgo,wikipedia]>=0.1.50",
    "beeai-sdk",
    "openai>=1.107.1",
    "openinference-instrumentation-beeai>=0.1.11",
    "pydantic-settings>=2.9.0",
    "tenacity>=9.1.2",
    "langchain-text-splitters>=0.3.0",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 120

[tool.uv.sources]
beeai-sdk = { path = "../../apps/beeai-sdk-py", editable = true }

[project.scripts]
server = "rag.agent:serve"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "watchfiles>=1.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
