[project]
name = "agentstack-cli"
version = "0.6.2"
description = "Agent Stack CLI"
readme = "README.md"
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "anyio>=4.12.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "jsonschema>=4.26.0",
    "jsf>=0.11.2",
    'gnureadline>=8.3.3; sys_platform != "win32"',
    "prompt-toolkit>=3.0.52",
    "inquirerpy>=0.3.4",
    "psutil>=7.2.2",
    "a2a-sdk", # version determined by agentstack-sdk
    "tenacity>=9.1.2",
    "typer>=0.21.1",
    "pyyaml>=6.0.3",
    "agentstack-sdk",
    "authlib>=1.6.6",
    "openai>=2.16.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.52.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "wheel>=0.46.3",
]

[tool.uv.sources]
agentstack-sdk = { path = "../agentstack-sdk-py", editable = true }

[project.scripts]
agentstack = "agentstack_cli:app"
agentstack-cli = "agentstack_cli:app"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ["src/agentstack_cli/data"]
source-exclude = ["**/.DS_Store"]

[tool.ruff]
line-length = 120
target-version = "py313"
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "UP", # pyupgrade
    "I", # isort
    "B", # bugbear
    "N", # pep8-naming
    "C4", # Comprehensions
    "Q", # Quotes
    "SIM", # Simplify
    "RUF", # Ruff
    "TID", # tidy-imports
    "ASYNC", # async
    # TODO: add "DTZ",   # DatetimeZ
    # TODO: add "ANN",   # annotations
]
lint.ignore = [
    "E501", # line lenght (annyoing)
    "UP013", # update TypedDict to longer syntax -- not necessary
]
force-exclude = true

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
