[project]
name = "agentstack-sdk"
version = "0.6.3"
description = "Agent Stack SDK"
readme = "README.md"
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "a2a-sdk==0.3.21",
    "objprint>=0.3.0",
    "uvicorn>=0.37.0,<0.38.0",
    "asyncclick>=8.1.8",
    "sse-starlette>=2.2.1",
    "starlette>=0.47.2",
    "anyio>=4.9.0",
    "opentelemetry-api>=1.35.0",
    "opentelemetry-exporter-otlp-proto-http>=1.35.0",
    "opentelemetry-instrumentation-fastapi>=0.56b0",
    "opentelemetry-sdk>=1.35.0",
    "tenacity>=9.1.2",
    "janus>=2.0.0",
    "httpx", # version determined by a2a-sdk
    "mcp>=1.12.3",
    "fastapi>=0.116.1",
    "authlib>=1.3.0",
    "async-lru>=2.0.4",
    "cachetools>=6.2.3",
    "typing-extensions>=4.15.0",
    "opentelemetry-instrumentation-httpx>=0.60b1",
    "opentelemetry-instrumentation-openai>=0.52.3",
]

[dependency-groups]
dev = [
    "beeai-framework[duckduckgo,wikipedia]>=0.1.76",
    "pyrefly>=0.52.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.12.3",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "UP",    # pyupgrade
    "I",     # isort
    "B",     # bugbear
    "N",     # pep8-naming
    "C4",    # Comprehensions
    "Q",     # Quotes
    "SIM",   # Simplify
    "RUF",   # Ruff
    "TID",   # tidy-imports
    "ASYNC", # async
    # TODO: add "DTZ",   # DatetimeZ
    # TODO: add "ANN",   # annotations
]
lint.ignore = [
    "E501", # line lenght (annyoing)
    "N999", # invalid module name agentstack-server (yeah, we use a dash, deal with it)
    "F403", # redundant with type checking
]
force-exclude = true

[tool.pytest.ini_options]
markers = ["e2e", "unit"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
