[project]
name = "gpt-researcher-agent"
version = "0.1.0"
description = ""
authors = [
    { name = "IBM Corp." },
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "gpt-researcher>=0.14.2",
    "duckduckgo-search~=7.5.5",
    "pydantic-settings>=2.7.1",
    "openinference-instrumentation-openai>=0.1.22",
    "beeai-sdk",
]

[project.scripts]
server = "gpt_researcher_agent.agent:run"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.uv.sources]
beeai-sdk = { path = "../../../apps/beeai-sdk", editable = true }
