[project]
name = "%{EXAMPLE_NAME}"
version = "0.1.0"
description = "%{EXAMPLE_DESCRIPTION}"
authors = [
    { name = "IBM Corp." },
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "agentstack-sdk>=0.5.3",
    "pyyaml>=6.0.2",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.uv.sources]
agentstack-sdk = { path = "%{SDK_PATH}", editable = true }

[project.scripts]
server = "%{EXAMPLE_NAME_SNAKE_CASE}.agent:run"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
search-path = ['%{SDK_PATH}/src', '.venv/lib/python3.13/site-packages']

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=0.52.0",
    "watchfiles>=1.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"