[project]
name = "chat"
version = "0.1.0"
description = "AI-powered conversational system with memory and tools."
authors = [
    { name = "IBM Corp." },
]
requires-python = ">=3.13,<4"
dependencies = [
    "beeai-framework[duckduckgo,wikipedia,beeai-platform]>=0.1.46",
    "openai>=1.107.1",
    "beeai-sdk",
    "openinference-instrumentation-beeai>=0.1.10",
    "pydantic-settings>=2.9.0",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 120

[tool.uv.sources]
beeai-sdk = { path = "../../../../apps/beeai-sdk", editable = true }

[project.scripts]
server = "chat.agent:serve"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
