[project]
name = "file-processing"
version = "0.1.0"
description = "Example demonstrating how to build an AI agent that can accept, process, and modify files."
authors = [
    { name = "IBM Corp." },
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "agentstack-sdk>=0.5.3",
    "pyyaml>=6.0.2",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.uv.sources]
agentstack-sdk = { path = "../../../../apps/agentstack-sdk-py", editable = true }

[project.scripts]
server = "file_processing.agent:run"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "watchfiles>=1.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"