[project]
name = "streaming-agent-history"
version = "0.1.0"
description = "Example demonstrating streamed responses with buffered history persistence for multi-turn conversations."
authors = [
    { name = "IBM Corp." },
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "beeai-framework[duckduckgo,wikipedia,a2a]==0.1.77",
    "tiktoken>=0.12.0",  # constraint for beeai-framework dependency (first version with musl arm64 wheel)
    "fastuuid>=0.14.0",  # constraint for beeai-framework dependency (first version with musl arm64 wheel)
    "agentstack-sdk>=0.5.3",
    "pyyaml>=6.0.2",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.uv.sources]
agentstack-sdk = { path = "../../../../apps/agentstack-sdk-py", editable = true }

[project.scripts]
server = "streaming_agent_history.agent:run"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
search-path = ['../../../../apps/agentstack-sdk-py/src', '.venv/lib/python3.14/site-packages']

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=0.52.0",
    "watchfiles>=1.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
