[project]
name = "implement-your-agent-logic"
version = "0.1.0"
description = "The starter example is minimal and intended for demonstration purposes only"
authors = [
    { name = "IBM Corp." },
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "agentstack-sdk>=0.5.3",
    "pyyaml>=6.0.2",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.uv.sources]
agentstack-sdk = { path = "../../../../apps/agentstack-sdk-py", editable = true }

[project.scripts]
server = "implement_your_agent_logic.agent:run"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
search-path = ['../../../../apps/agentstack-sdk-py/src', '.venv/lib/python3.14/site-packages']

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=0.52.0",
    "watchfiles>=1.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
